# neovim-collection

./: README.md  script.lua  thing.lua
after/syntax/: markdown.vim
configs/: init.vim
configs/lua/: config.lua
lua/: init.lua
lua/pytemp/: buffer.lua  display.lua  file.lua  header.lua  init.lua  terminal.lua
plugin/: markdown_todo.lua  pytemp.lua  sidecar.lua
plugin/tree-sitter-multipart/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  simple.multipart  tree-sitter.json
plugin/tree-sitter-multipart/bindings/c/: tree-sitter-multipart.pc.in
plugin/tree-sitter-multipart/bindings/go/: binding.go  binding_test.go
plugin/tree-sitter-multipart/bindings/node/: binding.cc  index.js
plugin/tree-sitter-multipart/bindings/python/tests/: test_binding.py
plugin/tree-sitter-multipart/bindings/python/tree_sitter_multipart/: __init__.py  binding.c
plugin/tree-sitter-multipart/bindings/rust/: build.rs  lib.rs
plugin/tree-sitter-multipart/bindings/swift/TreeSitterMultipart/: multipart.h
plugin/tree-sitter-multipart/bindings/swift/TreeSitterMultipartTests/: TreeSitterMultipartTests.swift
plugin/tree-sitter-multipart/corpus/: simple.txt
plugin/tree-sitter-multipart/src/: grammar.json  node-types.json  parser.c
